# live-bootcamp-project

./: README.md  compose.yml
.github/workflows/: prod.yml
auth-service/: Cargo.toml
auth-service/.sqlx/: query-92d86065df0e5345a4323cb6eda0d1c673ae9b5e1d74ad826703719cdb1bcaa3.json
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/services/datastores/: mod.rs  redis_banned_token_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/: routes.hurl
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/tests/hurl/: signup.hurl
