[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
# TODO: Move this dependency back to the dev-dependencies section once it is no longer used in lib.rs
reqwest = { version = "0.12.22", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
